--- a/templates/index.html
+++ b/templates/index.html
@@ -126,13 +126,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.facebook.com/luisa.macinas/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="/https://i.pcmag.com/imagery/articles/04HUXgEu0I3mdCOejOjQpNE-5.1620748900.fit_lim.size_1600x900.jpg">
                     </a>
                 </div>      
             </div>
