--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/https://i.pcmag.com/imagery/articles/04HUXgEu0I3mdCOejOjQpNE-5.1620748900.fit_lim.size_1600x900.jpg">
+                        <img src="/https://https://www.thespruce.com/thmb/RHFopOVQ1oiHnR2ebqMh74g833k=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/top-fall-blooming-flowers-for-your-garden-1402188-hero-68e83f5d995f43f2b0ca30ee958c9d8e.jpg">
                     </a>
                 </div>      
             </div>
