--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.6435-9/95707655_10222398652704778_3048781946655080448_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=h8cbDQrYvBwAX-Geu52&_nc_oc=AQkdZdJrUjmKAXTw7ij4syzSJReWmvsYjd6ynym5UeV0E0RnyVl2-krTijZbRTGf0qU&_nc_ht=scontent-dfw5-1.xx&oh=e937746919f6bd12dc809ccc5739c1d1&oe=61869F5A" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hello there {{name}}!</h1>
                         <hr class="star-light">
